--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,3 +8,30 @@ body {
   width: 100vw;
   overflow: hidden;
 }
+.popup {
+  max-width: 400px;
+}
+
+.entry-form label,
+.entry-form input,
+.entry-form textarea {
+  margin-right: 0.2rem;
+  display: block;
+  width: 100%;
+}
+
+/* input {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  box-sizing: border-box;
+} */
+
+button {
+  padding: 0.5rem;
+  margin: 0.5rem;
+  display: block;
+  width: 100%;
+  background-color: #333;
+  color: #fff;
+}
